@@ -4,7 +4,7 @@ license = MIT
 copyright_holder = Richard Simões
 copyright_year   = 2013
 
-version = v0.0.3
+version = v0.0.4
 
 [NextRelease]
 
@@ -24,7 +24,7 @@ skip = ^(?:base|strict|warnings|if|utf8|charnames|open|parent|re|subs|version|Ca
 [MinimumPerl]
 
 [Prereqs]
-Dancer2=0.02
+Dancer2=0.03
 
 [OurPkgVersion]
 
