@@ -2,25 +2,26 @@ package Dancer2::Template::Xslate;
 
 use v5.10;
 use strict;
-use warnings FATAL => "all";
+use warnings FATAL => 'all';
 use utf8;
 
-use Carp qw(croak);
 use Moo;
-use Dancer2::Core::Types;
+
+use Carp qw(croak);
+use Dancer2::Core::Types qw(InstanceOf);
 use Text::Xslate;
 use File::Spec::Functions qw(abs2rel file_name_is_absolute);
 
 # VERSION
 # ABSTRACT: Text::Xslate template engine for Dancer2
 
-with "Dancer2::Core::Role::Template";
+with 'Dancer2::Core::Role::Template';
 
-has "+engine" => (
-    isa => InstanceOf["Text::Xslate"]
+has '+default_tmpl_ext' => (
+    default => sub { 'tx' }
 );
-has "+default_tmpl_ext" => (
-    default => sub {"tx"},
+has '+engine' => (
+    isa => InstanceOf['Text::Xslate']
 );
 
 sub _build_engine {
@@ -30,8 +31,8 @@ sub _build_engine {
 
     # Dancer2 inject a couple options without asking; Text::Xslate protests:
     delete $config{environment};
-    if ( my $dancer_path = delete $config{location} ) {
-        $config{path} //= [$dancer_path];
+    if ( my $location = delete $config{location} ) {
+        $config{path} //= [$location];
     }
 
     return Text::Xslate->new(%config);
@@ -42,7 +43,7 @@ sub render {
 
     my $xslate = $self->engine;
     my $content = eval {
-        if ( ref($tmpl) eq "SCALAR" ) {
+        if ( ref($tmpl) eq 'SCALAR' ) {
             $xslate->render_string($$tmpl, $vars)
         }
         else {
